# daw-mcp

./: .gitignore  CHANGELOG.md  README.md  daw_mcp.opam  dune-project  start-daw-mcp.sh
.github/workflows/: ci.yml  release.yml
lib/: daw_mcp.ml  dune  mcp_resilience.ml  mcp_server.ml  types.ml
lib/automation/: automation.ml  automation.mli  dune
lib/daw/: ableton.ml  dune  logic.ml  mainstage.ml  reaper.ml
lib/driver/: driver.ml  driver.mli  dune
lib/integration/: daw_integration.ml  daw_integration.mli  dune  integration.ml  integration.mli  mcp_resilience.ml
lib/metering/: dune  metering.ml  metering.mli
lib/osc/: dune  osc.ml  osc.mli  osc_parse.ml  osc_serialize.ml  osc_transport.ml  osc_types.ml
lib/sse/: dune  sse.ml  sse.mli
lib/transport/: applescript.ml  applescript.mli  dune
plugin/ocaml/: bridge.ml  bridge.mli  dune
plugin/shim/: .gitignore  Info.plist.template  Makefile  au_entry.mm  au_view_controller.mm  clap_entry.c
test/: dune  test_applescript.ml  test_automation.ml  test_bridge.ml  test_integration.ml  test_mcp.ml  test_metering.ml  test_no_shell_lib.ml  test_no_shell_reaper.ml  test_osc.ml  test_sse.ml
xcode/: project.yml
xcode/AUExtension/: DAWBridgeAU.entitlements  Info.plist  au_entry.mm
xcode/App/: AppDelegate.m  DAWBridge.entitlements  Info.plist  Main.storyboard  main.m
xcode/DAWBridge.xcodeproj/: project.pbxproj
