(library
 (name daw_mcp_resilience)
 (public_name daw_mcp.resilience)
 (wrapped false)
 (modules mcp_resilience)
 (libraries eio unix))

(library
 (name daw_mcp)
 (public_name daw_mcp)
 (modules :standard \ mcp_resilience)
 (libraries
  mcp_protocol
  eio
  yojson
  logs
  fmt
  daw_driver
  daw_mcp.integration
  daw_mcp.metering
  daw_mcp.sse
  daw_mcp.automation
  daw_mcp.bridge)
 (preprocess
  (pps ppx_deriving_yojson)))