(test
 (name test_osc)
 (libraries daw_mcp.osc alcotest))

(test
 (name test_mcp)
 (libraries daw_mcp alcotest yojson))

(test
 (name test_applescript)
 (libraries daw_mcp.transport alcotest))

(test
 (name test_bridge)
 (libraries daw_mcp.bridge alcotest))

(test
 (name test_integration)
 (libraries daw_mcp daw_mcp.integration eio_main alcotest yojson))

(test
 (name test_metering)
 (libraries daw_mcp.metering alcotest yojson))

(test
 (name test_sse)
 (libraries daw_mcp.sse daw_mcp.metering eio_main alcotest yojson str))

(test
 (name test_automation)
 (libraries daw_mcp.automation alcotest yojson))

(test
 (name test_no_shell_reaper)
 (libraries unix)
 (deps ../lib/daw/reaper.ml)
 (action (run %{exe:test_no_shell_reaper.exe} %{dep:../lib/daw/reaper.ml})))

(test
 (name test_no_shell_lib)
 (libraries unix)
 (deps (glob_files_rec ../lib/*.ml))
 (action (run %{exe:test_no_shell_lib.exe} ../lib)))
